manifests/prod-multi-user/kubeflow-dashboard-patch.yaml
# Copyright 2021 The MLX Contributors
#
# SPDX-License-Identifier: Apache-2.0

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: centraldashboard
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /kubeflow
    rewrite:
      uri: /kubeflow
    route:
    - destination:
        host: centraldashboard.kubeflow.svc.cluster.local
        port:
          number: 80
