manifests/prod-multi-user/mlx-ui-patch.yaml
# Copyright 2021 IBM Corporation
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlx-ui
  namespace: kubeflow
  labels:
    service: mlx-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      service: mlx-ui
  template:
    metadata:
      name: mlx-ui
      labels:
        service: mlx-ui
    spec:
      containers:
      - name: mlx-ui
        # You can use your own webapp image below
        image: mlexchange/mlx-ui:nightly-origin-main
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        volumeMounts:
        - mountPath: /workspace/models
          name: dashboard-admin
          readOnly: true
          # When deploying MLX on OpenShift, readOnly SCC may be required for mlx-ui.
      volumes:
      - name: dashboard-admin
        secret:
          items:
          - key: admin.json
            path: admin.json
          secretName: mlx-dashboard-admin
      serviceAccountName: mlx-ui
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlx-ui
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: mlx-ui.kubeflow.svc.cluster.local
        port:
          number: 80
    timeout: 300s
