manifests/prod-multi-user/mlx-ext-authz-patch.yaml
# Copyright 2021 The MLX Contributors
#
# SPDX-License-Identifier: Apache-2.0

# Need to remove the "authn-filter" envoyfilter and replace it with
# this mlx-ext-authz
#
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: mlx-ext-authz
  namespace: istio-system
spec:
  action: CUSTOM
  provider:
    name: mlx-authz-http
  rules:
  - to:
    - operation:
        notPaths:
        - /
        - /index*
        - /login*
        - /mlx*.png
        - /static*
        - /datasets*
        - /models*
        - /pipelines*
        - /components*
        - /notebooks*
        - /inferenceservices*
        - /dashboard_lib.bundle.js*
        - /apis*
        - /manifest.json
        - /mlx-logo-white.png
        - /favicon.ico
  - to:
    - operation:
        methods:
        - POST
        - DELETE
        - PUT
        paths:
        - /apis*
  selector:
    matchLabels:
      istio: ingressgateway
